# rust_webservice_architecture

./: .gitignore  Cargo.toml  rustfmt.toml
axum_service/: Cargo.toml
axum_service/examples/: axum_structs_db.rs  axum_surrealdb_reqwest.rs
axum_service/src/: lib.rs  reply.rs  user_routes.rs
cli_ent/: Cargo.toml
cli_ent/examples/: cli_ent_structs_db.rs  cli_ent_surrealdb_reqwest.rs
cli_ent/src/: lib.rs
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/common_types/: email.rs  mod.rs
qwik-app/: package-lock.json  package.json
qwik-app/src/: root.tsx
qwik-app/src/routes/: index.module.css  index.tsx  styles.css.ts
qwik-app/src/routes/users/: index.module.css  index.tsx  styles.css.ts
qwik-app/src/users-client/: index.tsx
service_client/: Cargo.toml
service_client/src/: lib.rs  reply.rs
service_client/src/client/: mod.rs
service_client/src/users/: mod.rs  user_api.rs
structs_db/: Cargo.toml
structs_db/src/: lib.rs
structs_db/src/collections/: mod.rs  user_col.rs
structs_db/src/core/: mod.rs
surrealdb_reqwest_adapter/: Cargo.toml
surrealdb_reqwest_adapter/src/: client.rs  lib.rs  query_result.rs
users_leptos/: Cargo.toml  README.md
users_leptos/end2end/tests/: example.spec.ts
users_leptos/src/: app.rs  lib.rs  main.rs
users_leptos/src/users/: client_provider.rs  user_edit_form.rs  user_form.rs  user_list.rs  users_provider.rs  users_state.rs
users_yew/: Cargo.toml  index.html
users_yew/src/: main.rs  user_form.rs  user_list.rs  users_provider.rs
users_yew/src/users/: client_provider.rs  mod.rs  user_edit_form.rs  user_form.rs  user_list.rs  users_provider.rs  users_state.rs
