[package]
name = "rust_webservice_architecture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "domain",
  "structs_db",
  "axum_service",
  "service_client",
  "surrealdb_reqwest_adapter",
  "cli_ent",
  "users_yew"
]