[package]
name = "axum_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version="0.6.2", features=["macros"]}
serde = {version="1.0.152", features=["derive"]}
tokio = {version="1.24.1", features=["full"]}
tracing = "0.1"
domain = { path="../domain" }
tower-http = {version="0.4.0", features=["cors"]}
service_client = { path="../service_client" }
log = "0.4.17"

[dev-dependencies]
structs_db = { path="../structs_db" }
surrealdb_reqwest_adapter = { path="../surrealdb_reqwest_adapter" }
env_logger = "0.10.0"
