[package]
name = "cli_ent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
service_client = {path = "../service_client"}
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.69"
