[package]
name = "service_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path="../domain" }
serde = {version="1.0.152", features=["derive"]}
serde_json = "1.0"
async-trait = "0.1.68"
reqwest = { version = "0.11.16", features = ["json"]}