[package]
name = "surrealdb_reqwest_adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path="../domain" }
tokio = {version="1.24.1", features=["full"] }
reqwest = { version="0.11.13", features=["json"] }
serde = { version="1.0.152", features=["derive"] }
serde_json = "1.0.91"
log = "0.4.17"