[package]
name = "users_yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
js-sys = "0.3.61"
web-sys = "0.3.61"
reqwest = { version = "0.11.16", features = ["json"]}
wasm-bindgen-futures = "0.4.34"
service_client = { path="../service_client" }